--- a/lib/architecture_definitions/alz_custom.alz_architecture_definition.yaml
+++ b/lib/architecture_definitions/alz_custom.alz_architecture_definition.yaml
@@ -54,7 +54,7 @@ management_groups:
     archetypes:
       - management_custom
     exists: false
-    parent_id: platform
+    parent_id: agileadvant_platform
 
   - id: connectivity
     display_name: Connectivity
